--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -11,7 +11,6 @@ body{
 	display:inline;
 	float: right;
 }
-
 #title{
 	color: #3B5998;
 	font-weight: bold;
@@ -22,37 +21,48 @@ body{
 	margin-top: 0%;
 	font-size: xx-large;
 }
-
+.delta{
+	float: left;
+	color: green;
+	font-family: "Lucida Grande", sans-serif;
+	padding-left: 2%;
+	padding-bottom: 0;
+	margin-bottom: 0;
+	padding-top: 0;
+	margin-top: 0;
+}
 .logtime{
 	float: right;
-	padding-right: 2%;	 
+	padding-right: 2%;
 	color: #3B5998;
 	font-weight: normal;
 	margin-left: 0;
 	padding-left: 0;
 }
 .field{
+
+	text-decoration: underline;
 	color: #3B5998;
 }
 #logo{
 	vertical-align: middle;
-	height:10%; 
+	height:10%;
 	width:10%;
 	display:inline;
 	/*border-style: solid;
 	border-radius: 10px;
 	border-width: 2px;
-	border-color:#dfe3ee;*/	
+	border-color:#dfe3ee;*/
 }
 #wallDisplay{
 	margin-top:3%;
-	margin-left: 5%; 
+	margin-left: 5%;
 	/*padding-left: 30%;*/
 	width:100%;
 }
 /*.serviceLight{
 	height:auto;
-	margin-bottom: 20%; 
+	margin-bottom: 20%;
 	width:10%;
 	float: left;
 
@@ -61,7 +71,7 @@ body{
 	height: auto;
 	display:inline-block;
 	margin-right: .5%;
-	margin-left: .5%; 
+	margin-left: .5%;
 	margin-bottom:  .5%;
 	background-color:#f7f7f7;
 	border-radius: 10px;
@@ -72,6 +82,8 @@ body{
 }
 
 .total{
+
+	text-decoration: underline;
 	float:right;
 	font-weight: bold;
 	margin-top: 3%;
@@ -112,7 +124,7 @@ body{
     .container{
 		width:40%;
 	}
-	
+
 	.containerFull{
 		margin-right: 10%;
 		margin-left: 10%;
@@ -121,7 +133,7 @@ body{
 	.titleCard{
 		font-size: medium;
 	}
-}	
+}
 @media screen and (min-width: 900px){
 	.containerSmall{
 		width:20%;
