--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -40,7 +40,7 @@ body{
 	padding-left: 0;
 }
 .field{
-
+  padding-left: 1%;
 	text-decoration: underline;
 	color: #3B5998;
 }
@@ -82,7 +82,7 @@ body{
 }
 
 .total{
-
+  padding-right: 1%;
 	text-decoration: underline;
 	float:right;
 	font-weight: bold;
