--- a/wallDisplay/views/wallDisplay.jade
+++ b/wallDisplay/views/wallDisplay.jade
@@ -4,6 +4,7 @@ html(lang=it)
 		link(rel="stylesheet" href="css/WallDisplay.css")
 		script(src="https://use.fontawesome.com/9921b3da48.js")
 		script(src="js/jquery.min.js")
+		script(src="https://code.highcharts.com/highcharts.js")
 		script(src="/socket.io/socket.io.js")
 		script.
 			var abi='#{abi_code}';
