--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -1,7 +1,12 @@
-@font-face { font-family: Delicious; src: url('../font/sketchy.ttf'); }
+@font-face { font-family: Delicious; src: url('../font/fetish.ttf'); }
 
 body{
 	background-color: #f7f7f7;
+}
+.containerChart{
+	width:100%;
+	margin:0;
+	height: 120px;
 }
 #header{
 	margin-top: 0;
@@ -26,25 +31,31 @@ body{
 .delta{
 	float: left;
 	color: green;
-	font-family: "Lucida Grande", sans-serif;
+	font-family: "Delicious", sans-serif;
 	padding-left: 2%;
 	padding-bottom: 0;
-	margin-bottom: 0;
+	margin-bottom: 5%;
 	padding-top: 0;
 	margin-top: 0;
 }
 .logtime{
-	float: right;
-	padding-right: 2%;
-	color: #3B5998;
-	font-weight: normal;
-	margin-left: 0;
-	padding-left: 0;
+	background-color: #E0E0E0;
+	color: #FC5400;
+	font-family: "Delicious";
+	text-align: right;
+	font-weight:bold;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	margin-bottom: 0%;
+
 }
 .field{
+	font-family: "Delicious", sans-serif;
+	margin-top: 15%;
   padding-left: 1%;
-	text-decoration: underline;
-	color: #3B5998;
+
+	color: #000000;
 }
 #logo{
 	vertical-align: middle;
@@ -76,50 +87,50 @@ body{
 	margin-left: .5%;
 	margin-bottom:  .5%;
 	background-color:#f7f7f7;
-	border-radius: 10px;
+	/*border-radius: 10px;*/
 	border-style: solid;
-	border-color: #3B5998;
+	border-color: #504F51;
 	border-width: 1px;
 	position: relative;
 }
 
 .total{
   padding-right: 1%;
-	text-decoration: underline;
+
 	float:right;
 	font-weight: bold;
-	margin-top: 3%;
+	margin-top: 15%;
 	max-height: 1px;
-	font-size: xx-large;
-	font-family: "Lucida Grande", sans-serif;
-	color: #3B5998;
+	font-size: large;
+	font-family: "Delicious", sans-serif;
+	color: #000000;
 }
 
 .titleCard
 {
 	font-weight: normal;
-	font-family: "Lucida Grande", sans-serif;
-	border-bottom-left-radius:  10px;
-	border-bottom-right-radius:  10px;
+	font-family: "Delicious", sans-serif;
+	/*border-top-left-radius:  10px;*/
+	/*border-top-right-radius:  10px;*/
 	width: 95%;
-	color: #3B5998;
+	color: #FFFFFF;
 	padding-left: 5%;
-	bottom: 0	;
+	top: 0	;
 	font-size: xx-large;
 	position: absolute;
-	margin-bottom: 0%;
-	background-color: #dfe3ee;
+	margin-top: 0%;
+	background-color: #504F51;
 
 }
 .titleCardSmall{
-	font-size: small;
+	font-size: xx-small;
 }
 @media screen and (max-width: 599px) {
     .container{
 		width:90%;
 	}
 	.titleCard{
-		font-size: small;
+		font-size: xx-large;
 	}
 }
 @media screen and (min-width: 600px){
@@ -133,7 +144,7 @@ body{
 		width: 75%;
 	}
 	.titleCard{
-		font-size: medium;
+		font-size: x-large;
 	}
 }
 @media screen and (min-width: 900px){
@@ -148,7 +159,7 @@ body{
 	width:40%;
 	}
 	.titleCardLarge{
-		font-size: large;
+		font-size: x-large;
 	}
 	.containerFull{
 		margin-right: 10%;
@@ -156,6 +167,6 @@ body{
 		width: 75%;
 	}
     .titleCardFull{
-		font-size: xx-large;
+		font-size: x-large;
 	}
 }
