--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -4,9 +4,9 @@ body{
 	background-color: #f7f7f7;
 }
 .containerChart{
-	width:100%;
+	width:90%;
 	margin:0;
-	height: 120px;
+	height: 125px;
 }
 #header{
 	margin-top: 0;
@@ -82,6 +82,7 @@ body{
 }*/
 .container{
 	height: auto;
+	vertical-align: middle;
 	display:inline-block;
 	margin-right: .5%;
 	margin-left: .5%;
