--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -1,24 +1,19 @@
-@font-face { font-family: Delicious; src: url('../font/fetish.ttf'); }
+@font-face { font-family: "Delicious";
+ src: url('../font/fetish.ttf');
+	 }
 
 body{
 	background-color: #f7f7f7;
-}
-.containerChart{
-	width:90%;
-	margin:0;
-	height: 125px;
+	width: 100%;
+	overflow-x: hidden;
 }
 #header{
 	margin-top: 0;
-}
-#datetime{
-	color: #3B5998;
-	font-family: "Lucida Grande", sans-serif;
-	font-weight: normal;
-	display:inline;
-	float: right;
+	width:100%;
+	text-align: center;
 }
 #title{
+	width:100%;
 	color: #333333;
 	font-weight: bold;
 	/*text-decoration: underline;*/
@@ -28,58 +23,22 @@ body{
 	margin-top: 0%;
 	font-size: xx-large;
 }
-.delta{
-	float: left;
-	color: green;
-	font-family: "Delicious", sans-serif;
-	padding-left: 2%;
-	padding-bottom: 0;
-	margin-bottom: 5%;
-	padding-top: 0;
-	margin-top: 0;
-}
-.logtime{
-	background-color: #E0E0E0;
-	color: #FC5400;
-	font-family: "Delicious";
-	text-align: right;
-	font-weight:bold;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	margin-bottom: 0%;
+#footer{
 
-}
-.field{
-	font-family: "Delicious", sans-serif;
-	margin-top: 15%;
-  padding-left: 1%;
-
-	color: #000000;
+	text-align:center;
+	width:100%;
+	align:middle;
 }
 #logo{
-	vertical-align: middle;
-	height:10%;
-	width:10%;
-	display:inline;
-	/*border-style: solid;
-	border-radius: 10px;
-	border-width: 2px;
-	border-color:#dfe3ee;*/
+	height:20%;
+	width:2	0%;
+
 }
 #wallDisplay{
-	margin-top:3%;
-	margin-left: 5%;
-	/*padding-left: 30%;*/
+  padding-left: 5%;
 	width:100%;
+	margin-top:5%;
 }
-/*.serviceLight{
-	height:auto;
-	margin-bottom: 20%;
-	width:10%;
-	float: left;
-
-}*/
 .container{
 	height: auto;
 	vertical-align: middle;
@@ -95,18 +54,10 @@ body{
 	position: relative;
 }
 
-.total{
-  padding-right: 1%;
+.headerCard{
+	background-color: #504F51;
 
-	float:right;
-	font-weight: bold;
-	margin-top: 15%;
-	max-height: 1px;
-	font-size: large;
-	font-family: "Delicious", sans-serif;
-	color: #000000;
 }
-
 .titleCard
 {
 	font-weight: normal;
@@ -118,11 +69,57 @@ body{
 	padding-left: 5%;
 	top: 0	;
 	font-size: xx-large;
-	position: absolute;
 	margin-top: 0%;
-	background-color: #504F51;
-
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
+.info{
+	height: 50px;
+	vertical-align: middle;
+	display:inline-block;
+	width:100%;
+	margin-top:0;
+	padding-top: 0;
+	margin-bottom: 0;
+}
+.field{
+	font-family: "Delicious", sans-serif;
+	padding-left: 1%;
+  color: #000000;
+	margin-top:0;
+	padding-top: 0;
+	margin-bottom: 0;
+}
+
+.total{
+	margin-top:0;
+	padding-top: 0;
+	margin-bottom: 0;
+	padding-right: 1%;
+  float:right;
+	font-weight: bold;
+	font-size: large	;
+	font-family: "Delicious", sans-serif;
+	color: #000000;
+}
+.containerChart{
+	width:99%;
+	margin:0;
+	height: 130px;
+}
+.logtime{
+	background-color: #E0E0E0;
+	color: #FC5400;
+	font-family: "Delicious";
+	text-align: right;
+	font-weight:bold;
+	bottom: 0;
+	top:0;
+	width: 100%;
+	margin-bottom: 0%;
+  margin-top: 0%;
+}
+
 .titleCardSmall{
 	font-size: xx-small;
 }
