--- a/wallDisplay/views/wallDisplay.jade
+++ b/wallDisplay/views/wallDisplay.jade
@@ -15,7 +15,8 @@ html(lang=it)
 		title WallDisplay
 	body
 		#header
+			img#logo(src="img/Abiwatch01.png")
 			h3(id="title")
 		#wallDisplay
-		#footer
-			img#logo(src="img/Abiwatch01.png")
+		//- #footer
+			//- img#logo(src="img/Abiwatch01.png")
