--- a/wallDisplay/views/wallDisplay.jade
+++ b/wallDisplay/views/wallDisplay.jade
@@ -17,6 +17,7 @@ html(lang=it)
 		#header
 			img#logo(src="img/Abiwatch01.png")
 			h3(id="title")
+			//- img#uc(src="img/uc.jpg" )
 		#wallDisplay
 		//- #footer
 			//- img#logo(src="img/Abiwatch01.png")
