--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -19,6 +19,13 @@ body{
 	width:10%;
 
 }
+#uc{
+  float: right;
+	height:5%;
+	width:5%;
+  margin:0
+
+}
 #title{
 	width:80%;
 	color: #333333;
@@ -38,6 +45,7 @@ body{
 }
 
 #wallDisplay{
+    background-image: url('../img/uc.jpg');
   padding-left: 5%;
 	width:100%;
 	margin-top:1%;
