--- a/wallDisplay/views/wallDisplay.jade
+++ b/wallDisplay/views/wallDisplay.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang=it)
 	head
 		link(rel="stylesheet" href="css/WallDisplay.css")
-		script(src="https://use.fontawesome.com/9921b3da48.js")
+		//- script(src="https://use.fontawesome.com/9921b3da48.js")
 		script(src="js/jquery.min.js")
 		script(src="https://code.highcharts.com/highcharts.js")
 		script(src="/socket.io/socket.io.js")
