--- a/wallDisplay/views/wallDisplay.jade
+++ b/wallDisplay/views/wallDisplay.jade
@@ -11,7 +11,7 @@ html(lang=it)
 			var connection_id='#{connection_id}';
 		script(src='js/optionsChartFactory.js')
 		script(src='js/wallDisplay.js')
-		script(src='js/script.js')
+		script(src='js/wallScript.js')
 		title WallDisplay
 	body
 		#header
