--- a/wallDisplay/views/CSS/wallDisplay.css
+++ b/wallDisplay/views/CSS/wallDisplay.css
@@ -2,8 +2,11 @@
  src: url('../font/fetish.ttf');
 	 }
 body{
+  background-image: url('../img/bg.jpg');
 	background-color: #f7f7f7;
 	width: 100%;
+  background-size: 100%;
+  background-repeat:no-repeat;
 	overflow-x: hidden;
 }
 #header{
@@ -16,35 +19,43 @@ body{
   float: left;
 	height:10%;
 	width:10%;
-
 }
 #uc{
   float: right;
 	height:5%;
 	width:5%;
   margin:0
-
 }
 #title{
 	width:80%;
 	color: #333333;
 	font-weight: bold;
+  text-align: center;
 	/*text-decoration: underline;*/
 	font-family: "Delicious", sans-serif;
-	padding-left: 15%;
+	padding-left: 20%;
+  padding-right: 10%;
 	display:inline;
 	margin-top: 0%;
 	font-size: xx-large;
 }
+#datepicker{
+  font-family: "Delicious", sans-serif;
+  background-color: #f7f7f7;
+  font-weight: bold;
+  float: right;
+  margin-right: 5%;
+  border: 2px solid grey;
+  border-radius: 4px;
+  text-align: right;
+  padding-right: 5px;
+}
 #footer{
-
 	text-align:center;
 	width:100%;
 	align:middle;
 }
-
 #wallDisplay{
-    background-image: url('../img/uc.jpg');
   padding-left: 5%;
 	width:100%;
 	margin-top:1%;
@@ -139,7 +150,7 @@ body{
 		width:90%;
 	}
 	.titleCard{
-		font-size: xx-large;
+		font-size: large;
 	}
 }
 @media screen and (min-width: 600px){
