--- a/wallDisplay/views/service.jade
+++ b/wallDisplay/views/service.jade
@@ -2,17 +2,30 @@ doctype html
 html(lang=it)
   head
     title Service detail
+    link(rel="shortcut icon" href="img/favicon.ico" type="image/x-icon")
+    link(rel="icon" href="img/favicon.ico" type="image/x-icon")
     link(rel="stylesheet" href="CSS/serviceDetails.css")
     link(rel="stylesheet" href="CSS/datatables.min.css")
+    link(rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css")
     script(src="js/jquery.min.js")
     script(src="js/datatables.min.js")
+    script(src="https://cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js") 
+    script(src="//cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js")
+    script(src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")  
+    script(src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")  
+    script(src="//cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js")   
+    script(src="//cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js")       
     script(src="https://code.highcharts.com/highcharts.js")
+    script(src="http://code.highcharts.com/modules/exporting.js")
     script(src="js/serviceDetailsCharts.js")
     script(src="js/table.js")
     script.
       $(function(){
         var abi='#{abi}';
+        var date='#{date}';
+        var code='#{code}';
         var url="/serviceDetailJSON?";
+        setBackground();
         var setUpOptionsChart=function(serviceName){
           switch (serviceName) {
             case 'Ticket':
@@ -29,30 +42,57 @@ html(lang=it)
                 return {title:"",renderTo:"chart1",category:"data",series:[{name:"login"},{name:"bonifici"},{name:"f24"},{name:"estrattoconto"}]};
             case 'HB_Tempi':
                 $("#sub2").text("Tempi medi HB (.sec)");
-                return {title:"",renderTo:"chart2",category:"data",series:[{name:"login"},{name:"bonifici"},{name:"f24"},{name:"estrattoconto"}]};
+                return {title:"",renderTo:"chart2",category:"data",series:[{name:"login",suffixLabel:'s'},{name:"bonifici",suffixLabel:'s'}
+                        ,{name:"f24",suffixLabel:'s'},{name:"estrattoconto",suffixLabel:'s'}]};
+            case 'PWS':
+                $("#sub1").text("PWS tempi medi & Volumi");
+                return {title:"",renderTo:"chart1",category:"data",series:[{name:"hits",type:"column"},{name:"tempo_medio",opposite:true,suffixLabel:'s'}]};  
+            case 'CasseSportello':
+                $("#sub1").text("Sportello tempi medi & Volumi");
+                return {title:"",renderTo:"chart1",category:"data",series:[{name:"hits",type:"column"},{name:"tempo_medio",opposite:true,suffixLabel:'s'}]};  
+            case 'OperazioniSportello':
+                $("#sub1").text("Sportello tempi medi & Volumi");
+                return {title:"",renderTo:"chart1",category:"data",series:[{name:"hits",type:"column"},{name:"tempo_medio",opposite:true,suffixLabel:'s'}]}; 
+            case 'FEU_SintesiStatoCliente':
+                $("#sub1").text("FEU tempi medi & Volumi");
+                return {title:"",renderTo:"chart1",category:"data",series:[{name:"hits",type:"column"},{name:"tempo_medio",opposite:true,suffixLabel:'s'}]};  
+            case 'FEU_QuadroDiControllo':
+                $("#sub1").text("FEU tempi medi & Volumi");
+                return {title:"",renderTo:"chart1",category:"data",series:[{name:"hits",type:"column"},{name:"tempo_medio",opposite:true,suffixLabel:'s'}]};                
           }
         }
-        $.getJSON("/getAbiDescription?abi="+abi,function(json){
+        $.getJSON("/getAbiDescription?abi="+abi+'&code='+code,function(json){
             $("#title").text(json.description);
         })
+        
         if('#{service}'!="HB"){
-          $.getJSON(url+"abi="+abi+"&service="+'#{service}',function(json){
-            var options=setUpOptionsChart('#{service}');
-            var charts=new ServiceDetailsChart(json,options);
+          $.getJSON(url+"abi="+abi+'&code='+code+"&date="+date+"&service="+'#{service}',function(json){
+            if('#{service}'!="atm"){
+              var options=setUpOptionsChart('#{service}');
+              var charts=new ServiceDetailsChart(json,options);}
+              else{
+                $("#chart1").hide();
+              }
             var table=new  Table("table1",json);
           });}
         else {
           $("#body2").show();
-          $.getJSON(url+"abi="+abi+"&service=HB_Volumi",function(json){
+          $.getJSON(url+"abi="+abi+"&date="+date+'&code='+code+"&service=HB_Volumi",function(json){
             var table=new Table("table1",json);
             var options=setUpOptionsChart("HB_Volumi");
             var charts=new ServiceDetailsChart(json,options);
           });
-          $.getJSON(url+"abi="+abi+"&service=HB_Tempi",function(json){
+          $.getJSON(url+"abi="+abi+"&date="+date+'&code='+code+"&service=HB_Tempi",function(json){
             var table=new Table("table2",json);
             var options=setUpOptionsChart("HB_Tempi");
             var charts=new ServiceDetailsChart(json,options);
           });
+        }
+        function setBackground(){
+          var date=new Date();
+          if(date.getMonth()==11){
+            $("body").css('background-image','url(img/snow-background.jpg)')
+          }
         }
       })
     body
@@ -69,3 +109,4 @@ html(lang=it)
         .chart#chart2
         .table.datagrid#table2
       #footer
+      
