--- a/wd/views/selectInstitute.pug
+++ b/wd/views/selectInstitute.pug
@@ -15,10 +15,7 @@ html
       }
     script(src='js/jquery.min.js')
     script(type="text/javascript").
-      var institutions='#{user.controlled_institutions}';
-
       function onLoadF() {
-      if(institutions==='all'){
         $('.imageToResize').each(function() {
             var imgWidth = $(this).width();
             if (imgWidth>150) {
@@ -27,10 +24,9 @@ html
                 }
                 });
                 $('.imageToResize').click(function(){
-                var abi=$(this).attr("src").substr(4,5);
+                var abi=$(this).attr("src").substr(10,5);
                 location.href ='/'+abi;
                 });
-                }
 
       }
       window.onload = onLoadF;
@@ -41,93 +37,93 @@ html
       table#institutionsTable(cellpadding = 5)
         tr
           td
-            img(src="img/06085.png" class="imageToResize imgMaxHeight")
+            img(src="img/loghi/06085" class="imageToResize imgMaxHeight")
           td
-            img(src="img/06370.png" class="imageToResize imgMaxHeight"  alt="volterra")
+            img(src="img/loghi/06370" class="imageToResize imgMaxHeight"  alt="volterra")
           td
-            img(src="img/03127.jpg" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/03127" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/06045.png" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/06045" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/03365.png" class="imageToResize imgMaxHeight" alt="3venezie" )
+            img(src="img/loghi/03365" class="imageToResize imgMaxHeight" alt="3venezie" )
           td
-            img(src="img/10685.jpg" class="imageToResize imgMaxHeight" alt="ge" )
+            img(src="img/loghi/10685" class="imageToResize imgMaxHeight" alt="ge" )
 
         tr
           td
-            img(src="img/03440.gif" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/03440" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/03643.png" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/03643" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/05116.jpg" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/05116" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/05385.png" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/05385" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/03445.png" class="imageToResize imgMaxHeight"  alt="fca")
+            img(src="img/loghi/03445" class="imageToResize imgMaxHeight"  alt="fca")
           td
-            img(src="img/03321.gif" class="imageToResize imgMaxHeight"  alt="")
+            img(src="img/loghi/03321" class="imageToResize imgMaxHeight"  alt="")
         tr
           td
-            img(src="img/05424.jpg" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/05424" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/06155.jpg" class="imageToResize imgMaxHeight" alt="nuova cr ferrara")
+            img(src="img/loghi/06155" class="imageToResize imgMaxHeight" alt="nuova cr ferrara")
           td
-            img(src="img/03048.jpg" class="imageToResize imgMaxHeight"   alt="" )
+            img(src="img/loghi/03048" class="imageToResize imgMaxHeight"   alt="" )
           td
-            img(src="img/06115.png" class="imageToResize imgMaxHeight" )
+            img(src="img/loghi/06115" class="imageToResize imgMaxHeight" )
           td
-            img(src="img/05015.png" class="imageToResize imgMaxHeight" alt="lecchese" )
+            img(src="img/loghi/05015" class="imageToResize imgMaxHeight" alt="lecchese" )
           td
-            img(src="img/03051.jpg" class="imageToResize imgMaxHeight" alt="barclays" )
+            img(src="img/loghi/03051" class="imageToResize imgMaxHeight" alt="barclays" )
         tr
           td
-            img(src="img/03387.jpg" class="imageToResize imgMaxHeight")
+            img(src="img/loghi/03387" class="imageToResize imgMaxHeight")
           td
-            img(src="img/06220.png" class="imageToResize imgMaxHeight")
+            img(src="img/loghi/06220" class="imageToResize imgMaxHeight")
           td
-            img(src="img/03124.png" class="imageToResize imgMaxHeight")
+            img(src="img/loghi/03124" class="imageToResize imgMaxHeight")
           td
-            img(src="img/08340.png" class="imageToResize imgMaxHeight")
+            img(src="img/loghi/08340" class="imageToResize imgMaxHeight")
           td
-            img(src="img/03388.jpg" class="imageToResize imgMaxHeight" alt="stabiese")
+            img(src="img/loghi/03388" class="imageToResize imgMaxHeight" alt="stabiese")
           td
-            img(src="img/03126.jpg" class="imageToResize imgMaxHeight" alt="leonardo")
+            img(src="img/loghi/03126" class="imageToResize imgMaxHeight" alt="leonardo")
         tr
           td
-            img(src="img/03105.jpg" class="imageToResize imgMaxHeight" alt="vw" )
+            img(src="img/loghi/03105" class="imageToResize imgMaxHeight" alt="vw" )
           td
-            img(src="img/05390.jpg" class="imageToResize imgMaxHeight" alt="etruria" )
+            img(src="img/loghi/05390" class="imageToResize imgMaxHeight" alt="etruria" )
           td
-            img(src="img/10630.jpg" class="imageToResize imgMaxHeight" alt="ist credito sportivo" )
+            img(src="img/loghi/10630" class="imageToResize imgMaxHeight" alt="ist credito sportivo" )
           td
-            img(src="img/10680.png" class="imageToResize imgMaxHeight" alt="banca del mezzogiorno" )
+            img(src="img/loghi/10680" class="imageToResize imgMaxHeight" alt="banca del mezzogiorno" )
           td
-            img(src="img/03115.jpg" class="imageToResize imgMaxHeight" alt="" )
+            img(src="img/loghi/03115" class="imageToResize imgMaxHeight" alt="" )
           td
-            img(src="img/05824.jpg" class="imageToResize imgMaxHeight" alt="" )
+            img(src="img/loghi/05824" class="imageToResize imgMaxHeight" alt="" )
         tr
           td
-            img(src="img/03353.jpg" class="imageToResize imgMaxHeight" alt="banca del SUD" )
+            img(src="img/loghi/03353" class="imageToResize imgMaxHeight" alt="banca del SUD" )
           td
-            img(src="img/03263.jpg" class="imageToResize imgMaxHeight" alt="IBL" )
+            img(src="img/loghi/03263" class="imageToResize imgMaxHeight" alt="IBL" )
           td
-            img(src="img/03062.jpg" class="imageToResize imgMaxHeight" alt="Mediolanum" )
+            img(src="img/loghi/03062" class="imageToResize imgMaxHeight" alt="Mediolanum" )
           td
-            img(src="img/03032.gif" class="imageToResize imgMaxHeight" alt="Credem" )
+            img(src="img/loghi/03032" class="imageToResize imgMaxHeight" alt="Credem" )
           td
-            img(src="img/03011.jpg" class="imageToResize imgMaxHeight" alt="hypo" )
+            img(src="img/loghi/03011" class="imageToResize imgMaxHeight" alt="hypo" )
           td
-            img(src="img/06090.jpg" class="imageToResize imgMaxHeight" alt="" )
+            img(src="img/loghi/06090" class="imageToResize imgMaxHeight" alt="" )
         tr
           td
-            img(src="img/03253.jpg" class="imageToResize imgMaxHeight" alt="del vecchio" )
+            img(src="img/loghi/03253" class="imageToResize imgMaxHeight" alt="del vecchio" )
           td
-            img(src="img/03488.png" class="imageToResize imgMaxHeight" alt="cassa lombarda" )
+            img(src="img/loghi/03488" class="imageToResize imgMaxHeight" alt="cassa lombarda" )
           td
-            img(src="img/03183.png" class="imageToResize imgMaxHeight" alt="esperia" )
+            img(src="img/loghi/03183" class="imageToResize imgMaxHeight" alt="esperia" )
           td
-            img(src="img/03598.jpg" class="imageToResize imgMaxHeight" alt="ubae" )
+            img(src="img/loghi/03598" class="imageToResize imgMaxHeight" alt="ubae" )
           td
-            img(src="img/03321.gif" class="imageToResize imgMaxHeight" alt="rbc" )
+            img(src="img/loghi/03321" class="imageToResize imgMaxHeight" alt="rbc" )
           td
-            img(src="img/32502.png" class="imageToResize imgMaxHeight" alt="pasvim" )
+            img(src="img/loghi/32502" class="imageToResize imgMaxHeight" alt="pasvim" )
