--- a/wd/views/wallDisplay.pug
+++ b/wd/views/wallDisplay.pug
@@ -1,29 +1,79 @@
 doctype html
 html(lang=it)
 	head
+		meta(http-equiv="refresh" content="3600")
 		link(rel="shortcut icon" href="img/favicon.ico" type="image/x-icon")
 		link(rel="icon" href="img/favicon.ico" type="image/x-icon")
 		link(rel="stylesheet" href="CSS/wallDisplay.css")
-		link(rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")
+		link(rel="stylesheet" href="CSS/jquery-ui.min.css")
 		//- script(src="https://use.fontawesome.com/9921b3da48.js")
 		script(src="js/jquery.min.js")
-		script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-		script(src="https://code.highcharts.com/highcharts.js")
+		script(src="js/jquery-ui.min.js")
+		script(src="js/highcharts.js")
 		script(src="/socket.io/socket.io.js")
 		script.
-			var abi='#{abi_code}';
-			var connection_id='#{connection_id}';
-			console.log(connection_id);
-			var dateString='#{date}';
-			var date=new Date();
-			date.setTime( date.getTime() - date.getTimezoneOffset()*60*1000 );
-			var todayDate=date.toISOString().substring(0,10);
-			if(dateString===''){
-				dateString=todayDate
-			}
+			$(function(){
+				var abi='#{abi_code}';
+				var connection_id='#{connection_id}';
+				var dateString='#{date}';
+				console.log(dateString);
+				var date=new Date();
+				date.setTime( date.getTime() - date.getTimezoneOffset()*60*1000 );
+				var todayDate=date.toISOString().substring(0,10);
+				if(dateString===''){
+					dateString=todayDate
+					}
+					var socket = io();
+					var wallDisplay;
+					  $( function() {
+					    setBackground();
+					    $("#logout").click(function(){
+					      location.href='/logout'
+					    });
+					    $("#datepicker").datepicker({
+					       dateFormat: 'yy-mm-dd',
+					       onSelect: function(d) {
+					            $("#datepicker").datepicker("setDate", dateString);
+					            //close calendar
+					            $(this).blur();
+					            window.open('/'+abi+'?date='+d, '_blank');
+
+					        }
+					    }).datepicker("setDate", dateString);
+					    renderWallDisplay();
+						// console.log((abi+'_'+connection_id).split("_")[0]);
+						socket.on('json '+abi+'_'+connection_id+' response', function(jsonString){
+							json=JSON.parse(jsonString);
+					        wallDisplay.update(json);
+					        //console.log("Aggiornato!!!!");
+					  });
+					  //update only real-time data
+					  if(dateString===todayDate)
+						 setInterval(refreshData, 60*1000);
+					});
+					function refreshData() {
+					    socket.emit('json request',abi+'_'+dateString+'_'+connection_id);
+					     //console.log("AGGIORNA");
+
+					}
+					function setBackground(){
+					  if(date.getMonth()==11){
+					    $("body").css('background-image','url(img/snow-background.jpg)')
+					  }
+
+					}
+					function renderWallDisplay(){
+						$.getJSON('/getJSON/'+abi+'?date='+dateString,function(json){
+					    $("#title").text(json.lastRel.abi_desc);
+						//controlla l'esistenza dell'immagine di logo
+					        wallDisplay=new WallDisplay(json);
+					        wallDisplay.render();
+					})
+					}
+			})
 		script(src='js/optionsChartFactory.js')
 		script(src='js/wallDisplay.js')
-		script(src='js/wallScript.js')
+		//- script(src='js/wallScript.js')
 		title WallDisplay
 	body
 		#header
@@ -32,5 +82,5 @@ html(lang=it)
 			input(id="datepicker" maxlength="10" size="10" placeholder="Select date")
 			//- img#uc(src="img/uc.jpg" )
 		#wallDisplay
-		//- #footer
-			//- img#logo(src="img/Abiwatch01.png")
+		#footer
+			img#logout(src="img/logout.png" alt="logout" title="Logout")
