--- a/wd/views/CSS/serviceDetails.css
+++ b/wd/views/CSS/serviceDetails.css
@@ -1,7 +1,5 @@
-@font-face { font-family: "Delicious";
- src: url('../font/fetish.ttf');
-	 }
 body{
+  font-family: monospace;
   width:100%;
 background-image: url('../img/bg.jpg');
 background-size: 100%;
@@ -34,11 +32,15 @@ th {
 td {
     text-align: right;
 }
+#logo{
+  margin-left: 40%;
+  margin-right: 40%;
+  width: 20%;
+}
 #title{
 	width:100%;
 	color: #333333;
 	font-weight: bold;
-	font-family: "Delicious", sans-serif;
   text-align: center;
   padding-left: 25%;
 	display:inline;
@@ -50,7 +52,6 @@ td {
   margin:0;
   color: #333333;
 	font-weight: bold;
-	font-family: "Delicious", sans-serif;
   text-align: center;
   display:inline;
 	font-size: x-large;
